# baserock

./: .gitignore  LICENSE  README.md
contracts/: .env.example  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: BrockToken.sol  MiningEngine.sol  RewardDistributor.sol  Treasury.sol
contracts/test/: BrockToken.t.sol  MiningEngine.t.sol  RewardDistributor.t.sol  Treasury.t.sol
frontend/: index.html  package-lock.json  package.json  verify_mainnet.mjs  vite.config.ts
frontend/scripts/: find_nonce.mjs  interact_all.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/config/: abi.ts  wagmi.ts
frontend/src/pages/: Economy.tsx  Grid.tsx  Leaderboard.tsx  Mine.tsx  Profile.tsx
frontend/src/styles/: design-system.css
frontend/src/workers/: mining.worker.ts
mining-engine/: Cargo.toml  test.bat
mining-engine/src/: hasher.rs  lib.rs
