[package]
name = "baserock-mining-engine"
version = "0.1.0"
edition = "2021"
description = "Browser-based keccak256 Proof-of-Work mining engine for Baserock protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
